tests/markups/fail-31.markup
<span gravity-hint="blue">test</span>
